--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -9,49 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="referrer" content="always">
     <meta name="referrer" content="no-referrer">
-    <link href="{{.__STATIC__}}/picture/logo.png" rel="icon" type="image/png">
-    <link href="{{.__CSS__}}/style.css" rel="stylesheet" type="text/css">
-    <link href="{{.__CSS__}}/aliicon.css" rel="stylesheet" type="text/css">
-    <link href="{{.__CSS__}}/mxhtmlblack.css" disabled="" class="theme_black" type="text/css" rel="stylesheet">
-    <script src="{{.__STATIC__}}/cdn/expire-1-M/jquery/1.9.1/jquery.min.js"></script>
-    <script src="{{.__JS__}}/jquery.lazyload.js" type="text/javascript"></script>
-    <script src="{{.__STATIC__}}/cdn/expire-10-y/jquery-autocomplete/1.0.7/jquery.auto-complete.js"></script>
-    <script src="{{.__JS__}}/jquery.cookie.js"></script>
-    <script src="{{.__JS__}}/home.js"></script>
-    <script src="{{.__STATIC__}}/cdn/expire-1-M/clipboard.js/2.0.0/clipboard.min.js" type="text/javascript"></script>
-    <script src="{{.__STATIC__}}/cdn/expire-1-M/layer/3.1.1/layer.js"></script>
-    <script src="{{.__JS__}}/script.js"></script>
-    <script>
-        var clothes = $.cookie('clothes');
-        if (clothes) {
-            if (clothes == 'white') {
-                $('.theme_black').removeAttr('disabled');
-            } else {
-                $('.theme_black').attr('disabled', '');
-            }
-        } else {
-            $.cookie('clothes', 'black', { expires: 365, path: '/' })
-        }
-    </script>
-    <script>
-        function clothesChange(){
-            var clothes = $.cookie('clothes');
-            if (clothes == 'black') {
-                $.cookie('clothes','white', {expires: 365, path: '/'});
-                $('.theme_black').each(function(){
-                    $(this).removeAttr('disabled');
-                });
-
-            } else {
-                $.cookie('clothes','black', {expires: 365, path: '/'});
-                $('.theme_black').each(function(){
-                    $(this).attr('disabled', '');
-                });
-            }
-            clothes = $.cookie('clothes');
-        }
-    </script>
-    <!-- 全局广告位 -->
+    {{template "common/head.html" .}}
 </head>
 <body class="homepage">
 <header id="header" class="wrapper">
@@ -5348,8 +5306,10 @@
         </script>
         <div class="shortcuts-mobile-overlay"></div>
         <script src="{{.__JS__}}/mxhtml.js"></script>
-        <!-- 底部广告位 --> <!-- 底部-->
-
-    </div></div></body>
+        <!-- 底部广告位 -->
+        <!-- 底部-->
+    </div>
+</div>
+</body>
 </html>
 {{end}}
