--- a/templates/default/v/play.html
+++ b/templates/default/v/play.html
@@ -9,54 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="referrer" content="always">
     <meta name="referrer" content="no-referrer">
-    <link rel="icon" href="{{.__STATIC__}}/picture/logo.png" type="image/png">
-    <link href="{{.__CSS__}}/style.css" rel="stylesheet" type="text/css">
-    <link href="{{.__CSS__}}/aliicon.css" rel="stylesheet" type="text/css">
-    <link disabled="" class="theme_black" type="text/css" rel="stylesheet" href="{{.__CSS__}}/mxhtmlblack.css"><script src="{{.__STATIC__}}/cdn/expire-1-M/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="{{.__JS__}}/jquery.lazyload.js"></script>
-    <script src="{{.__STATIC__}}/cdn/expire-10-y/jquery-autocomplete/1.0.7/jquery.auto-complete.js"></script>
-    <script src="{{.__JS__}}/jquery.cookie.js"></script>
-    <script src="{{.__JS__}}/home.js"></script>
-    <script type="text/javascript" src="{{.__STATIC__}}/cdn/expire-1-M/clipboard.js/2.0.0/clipboard.min.js"></script>
-    <script src="{{.__STATIC__}}/cdn/expire-1-M/layer/3.1.1/layer.js"></script>
-    <script type="text/javascript">var vod_name='射雕英雄传之九阴白骨爪',vod_url=window.location.href,vod_part='HD';</script>
+    {{template "common/head.html" .}}
+    <script type="text/javascript">
+        var vod_name='射雕英雄传之九阴白骨爪',
+            vod_url=window.location.href,
+            vod_part='HD';
+    </script>
     <script type="text/javascript" src="{{.__JS__}}/history.js"></script>
     <script type="text/javascript" src="{{.__JS__}}/jquery.qrcode.min.js"></script>
     <script type="text/javascript" src="{{.__JS__}}/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="{{.__CSS__}}/swiper-bundle.min.css" type="text/css">
-    <script src="{{.__JS__}}/script.js"></script>
-    <script>
-        var clothes = $.cookie('clothes');
-        if (clothes) {
-            if (clothes == 'white') {
-                $('.theme_black').removeAttr('disabled');
-            } else {
-                $('.theme_black').attr('disabled', '');
-            }
-        } else {
-            $.cookie('clothes', 'black', { expires: 365, path: '/' })
-        }
-    </script>
-    <script>
-
-        function clothesChange(){
-            var clothes = $.cookie('clothes');
-            if (clothes == 'black') {
-                $.cookie('clothes','white', {expires: 365, path: '/'});
-                $('.theme_black').each(function(){
-                    $(this).removeAttr('disabled');
-                });
-
-            } else {
-                $.cookie('clothes','black', {expires: 365, path: '/'});
-                $('.theme_black').each(function(){
-                    $(this).attr('disabled', '');
-                });
-            }
-            clothes = $.cookie('clothes');
-        }
-    </script>
-    <!-- 全局广告位 -->
 </head>
 <!--新的-->
 <style>
@@ -81,7 +43,6 @@
             <div class="brand">
                 <a href="index.html" class="logo" title="电影先生"><img src="{{.__STATIC__}}/picture/logo-s.png" alt="电影先生"></a>
             </div>
-
             <div class="nav-search">
                 <form action="/search--------------.html" class="search-dh">
                     <div class="search-box"><input class="search-input ac_wd txtKeywords" type="text" name="wd" autocomplete="off" placeholder="搜索电影、电视剧、综艺、动漫、演员">
@@ -1791,7 +1752,9 @@
                 });
             }
         </script>
-    </div></div></body>
+    </div>
+</div>
+</body>
 
 </html>
 {{end}}
