--- a/templates/default/label/app.html
+++ b/templates/default/label/app.html
@@ -9,7 +9,7 @@
     <meta name="description" content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。">
     <meta name="referrer" content="always">
     <meta name="referrer" content="no-referrer">
-    {{template "common/head.html" .}}
+    {{template "header" .}}
 </head>
 <body class="article page">
 <header id="header" class="wrapper">
