--- a/templates/default/play.html
+++ b/templates/default/play.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="referrer" content="always">
     <meta name="referrer" content="no-referrer">
-    {{template "common/head.html" .}}
+    {{template "header" .}}
     <script type="text/javascript">
         var vod_name='射雕英雄传之九阴白骨爪',
             vod_url=window.location.href,
