--- a/templates/default/pianku.html
+++ b/templates/default/pianku.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="referrer" content="always">
     <meta name="referrer" content="no-referrer">
-    {{template "common/head.html" .}}
+    {{template "header" .}}
 </head>
 <body class="library page">
 <header id="header" class="wrapper">
